# salmon

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: cve-scan.yml  release.yml  test.yml
config/: bmcs.yaml  tools.yaml
src/salmon/: __init__.py  config.py  ipmi.py  main.py
tests/: bmcs.yaml  requirements.txt  test_config.py  test_e2e.py  test_redfish.py
tests/mock/: ipmitool
