[project]
name = "salmon"
version = "0.1.0"
description = "Redfish-flavoured HTTP facade for legacy IPMI BMCs via ipmitool"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
]

[project.scripts]
salmon = "salmon.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
  "httpx>=0.28",
  # tests/test_e2e.py uses requests rather than httpx so the
  # surface matches the other workspace services' test_e2e.py
  # (needle, outofoffice, brl, pandoc all use it). Adds ~5
  # transitive deps; cost-of-uniformity is low.
  "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salmon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
